assets/css/style.css
/* -------------------------------------------------------------------- Variables */
:root {
    --gold:#f1bf58;
    --sun:#fabc11;
    --black:black;

}

/* -------------------------------------------------------------------- Resets */

html {
    width: 100%;
}

*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    background-image: url("../images/background.png");
    background-color:var(--gold);
    background-repeat: no-repeat;
    background-position: center;
    background-attachment: fixed;
    background-size: cover;
}

a {
    text-decoration: none;
}

/* -------------------------------------------------------- Harry potter flying Animation */

#flying-animation img{
    position: absolute;
    animation: flying-harry 10s infinite normal ease;
    width:150px;
    height:150px;
}


/* -------------------------------------------------------- header section */
#timer{
   width:200px;
   position: absolute;
   top:0;
   left:0;
   padding: 20px;
}
#points{
    width:200px;
    position:absolute ;
    top:0;
    right:0;
    padding: 20px;
}

#header-instruction-container{
    text-align: center;
}
#header-instruction-container p{
    font-size: 40px;
    font-weight: bold;
    padding: 20px;
    margin-top: 1%;
}
/* -------------------------------------------------------- Home section*/

#game-name-img{
    display: block;
    width:50%;
    margin-top:10%;
    margin-left: auto;
    margin-right: auto;
}

#start-btn{
  width:250px;
  background-color:transparent;
  margin-top: 5%;
  border: none;
  transform: translateY(-6px);
}
#start-btn img{
    width:100%;
}

#start-btn:active {
    transform: translateY(-2px);
  
}

.wand-container{
 text-align: center;
 margin-top:-5%;
 margin-left: -35%;
}

#wand{
    width:200px;
}


/* -------------------------------------------------------- footer section*/
footer{
    position: fixed;
    bottom: 15px;
    width:100%;
    display: grid;
    grid-template-columns: auto;
    justify-content: center;
    padding: 20px;
}


#copyright-container p{
    font-size: 25px;
    font-weight: bold;
}

#social-media-links a{
    font-size: 40px;
    color:black;
    margin:10px;
}

#social-media-links{
    display: grid;
    justify-content: center;
    grid-template-columns: auto auto auto auto;
    
}

/* -------------------------------------------------------------------- Animation */

@keyframes flying-harry{
    0% {left:0px; top:0px}
    25% {top:300px;}
    50%{top:0px}
    100% {top:0px; left: 90%;}
}


/* -------------------------------------------------------------------- Media queries */


/* Medium devices (landscape tablets, from 1025px to 768px) */
@media only screen and (max-width: 919px) {
    #header-instruction-container p{
        font-size: 30px;
        margin-top: 10%;
    }

}


/* Small devices (phones, 768px and down) */
@media only screen and (max-width: 768px) {
    /* header */
    #timer{
        width:150px;
        position: absolute;
        top:0;
        left:0;
        padding: 20px;
     }
     #points{
         width:150px;
         position:absolute ;
         top:0;
         right:0;
         padding: 20px;
     }
     #header-instruction-container p{
        font-size: 25px;
        margin-top: 20%;
    }

    /* home */
    #game-name-img{
        width:100%;
        margin-top:35%;
        padding: 10px;
    }

    .wand-container{
        text-align: center;
        margin-top:5%;
        margin-left: -35%;
    }
       
    #wand{
        width:150px;
    }

    #start-btn{
        width:150px;
        background-color:transparent;
    }

       
    /* footer*/
    footer{
        grid-template-columns: auto;
        justify-content: center;
        column-gap: 0;
        row-gap: 10px;
        padding:10px;
    }
    #copyright-container p{
        font-size: 20px;
    }
    #social-media-links a{
        font-size: 30px;
    }

    /* Animation media queries */
    @keyframes flying-harry  {
        0% {left:0px; top:0px}
        25% {top:300px;}
        50%{top:0px}
        100% {top:0px; left: 55%;}
    }
}

